# libmesh_sandbox

./: CMakeLists.txt  FindLIBMESH.cmake  README.md
advection1d/: CMakeLists.txt  main_trad.cpp  supg.cpp
dirichlet/: CMakeLists.txt  main.cpp  main.cxx
elem_add/: CMakeLists.txt  main.cpp
gmsh/: CMakeLists.txt  main.cpp
hermite1d/: CMakeLists.txt  main.cpp  main_trad.cpp
neumann2d/: CMakeLists.txt  main.cpp
ns/: CMakeLists.txt  main.cpp
self_lumping1d/: CMakeLists.txt  main.cpp
stokes2d/: CMakeLists.txt  main.cpp
stokes3d/: CMakeLists.txt  main.cpp  main_libmesh.cpp
test1d/: CMakeLists.txt  main.cpp  main_fem.cpp
test2d/: CMakeLists.txt  main.cpp
